# sdwan-overlay

./: LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum
.github/: release-template.md
.github/workflows/: ci.yml  packages.yml  release.yml
cmd/controller/: main.go
cmd/controller/internal/config/: config.go
cmd/controller/internal/server/: server.go
cmd/controller/internal/store/: store.go
config/: edges.yml  prometheus.yml
config/controller/: controller.yml
config/device-agent/: config.yml
config/fec-engine/: config.yml
config/packet-scheduler/: config.yml
config/reassembly-engine/: config.yml
config/underlay-manager/: config.yml
cpp/fec-engine/: Makefile
cpp/fec-engine/include/: fec_engine.h
cpp/fec-engine/src/: fec_engine.cpp  main.cpp
cpp/reassembly-engine/: Makefile
cpp/reassembly-engine/include/: reassembly_engine.h
cpp/reassembly-engine/src/: main.cpp  reassembly_engine.cpp
docker/controller/: Dockerfile
docker/device-agent/: Dockerfile
docker/fec-engine/: Dockerfile
docker/packet-scheduler/: Dockerfile
docker/reassembly-engine/: Dockerfile
docker/underlay-manager/: Dockerfile
docs/: COMPILED_DEPLOYMENT.md  configuration.md  setup-guide.md
python/device-agent/: setup.py
python/device-agent/device_agent/: __main__.py  agent.py  config.py  main.py
rust/packet-scheduler/: Cargo.toml
rust/packet-scheduler/src/: config.rs  lib.rs  main.rs  metrics.rs  proto.rs  qos.rs  scheduler.rs
rust/underlay-manager/: Cargo.toml
rust/underlay-manager/src/: config.rs  lib.rs  main.rs  metrics.rs  probe.rs  proto.rs  server.rs
scripts/: build-release.sh  create-release.sh  deploy-bulk.sh  deploy-edge.sh  install-compiled.sh  manage-cluster.sh  setup.sh  start-services.sh  test-connectivity.sh
