[package]
name = "packet-scheduler"
version = "0.1.0"
edition = "2021"
authors = ["SD-WAN Team"]
description = "Per-packet scheduling engine for SD-WAN overlay"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tonic = "0.10"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
crossbeam-channel = "0.5"
parking_lot = "0.12"
dashmap = "5.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

# [[bench]]
# name = "scheduler_benchmarks"
# harness = false

[features]
default = []
dpdk = []
epoll = [] 